[tool.poetry]
name = "fastapi-cache2"
version = "0.1.9"
description = "Cache for FastAPI"
authors = [
    "long2ice <long2ice@gmail.com>",
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/long2ice/fastapi-cache"
repository = "https://github.com/long2ice/fastapi-cache.git"
documentation = "https://github.com/long2ice/fastapi-cache"
keywords = [
    "fastapi",
    "cache",
    "caching",
]
packages = [
    { include = "fastapi_cache" },
]
include = [
    "LICENSE",
    "README.md",
]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "*"
uvicorn = "*"
pendulum = "*"

[tool.poetry.dependencies.redis]
version = "^4.2.0rc1"
optional = true

[tool.poetry.dependencies.aiomcache]
version = "*"
optional = true

[tool.poetry.dependencies.aiobotocore]
version = "^1.4.1"
optional = true

[tool.poetry.dev-dependencies]
flake8 = "*"
isort = "*"
black = "*"
pytest = "*"

[tool.poetry.extras]
redis = [
    "redis",
]
memcache = [
    "aiomcache",
]
dynamodb = [
    "aiobotocore",
]
all = [
    "redis",
    "aiomcache",
    "aiobotocore",
]

[tool.black]
line-length = 100
target-version = [
    "py36",
    "py37",
    "py38",
    "py39",
]

[build-system]
requires = [
    "poetry>=0.12",
]
build-backend = "poetry.masonry.api"

[project]
version = "0.1.9+lineaje.1"
maintainers = [
    { name = "Lineaje DepFixer", email = "221268890+Lineaje-DepFixer@users.noreply.github.com" },
]

[project.urls]
Homepage = "https://github.com/lineaje-labs-gos/long2ice-fastapi-cache"
Repository = "https://github.com/lineaje-labs-gos/long2ice-fastapi-cache"
Tracker = "https://github.com/lineaje-labs-gos/long2ice-fastapi-cache/issues"
